--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,13 +3,26 @@ spring:
         name: cqxxxxxxxx.web
 ---
 spring:
-
+  datasource:
+    url: jdbc:mysql://localhost:3306/somethingnew?useUnicode=true&characterEncoding=utf-8
+    username: root
+    password:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.jdbc.Driver
+    filters: stat
+    maxActive: 20
+    initialSize: 5
+    minIdle: 5
+    maxWait: 60000
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: SELECT 1 FROM DUAL
 server:
   port: 9000
 logging:
    file: /logs/cqxxxxxxxx.web.log
    level:
-     root: info
+     root: debug
 
 
 #  as default
