--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
 ---
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/somethingnew?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://localhost:3306/cqxxxxxxxx?useUnicode=true&characterEncoding=utf-8
     username: root
     password:
     type: com.alibaba.druid.pool.DruidDataSource
